--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <p>My first program.</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+        let socket = io();
+        socket.on('connect', () =>{
+            console.log("Connected to server.");
+        });
+
+        socket.on('disconnect', () =>{
+            console.log("Disconnected to server.");
+        });
+    </script>
 </body>
 </html>
