--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <p>My first program.</p>
+    <form id="message-form">
+        <input type="text" name="message" placeholder="message">
+        <button type="submit" id = 'submit_bts'>Submit</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
 </body>
